[package]
name        = "espeak-ng-data-dict-eu"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for eu_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "eu", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/eu_dict",
]
