[package]
name        = "espeak-ng-data-dict-fa"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for fa_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "fa", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/fa_dict",
]
