[package]
name        = "espeak-ng-data-dict-fi"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for fi_dict"
license     = "GPL-3.0-or-later"
authors     = ["Eugene Hauptmann"]
repository  = "https://github.com/eugenehp/espeak-ng-rs"
homepage    = "https://github.com/eugenehp/espeak-ng-rs"

keywords    = ["espeak", "tts", "fi", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/fi_dict",
]
