[package]
name        = "espeak-ng-data-dict-fr"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for fr_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "fr", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/fr_dict",
]
