[package]
name        = "espeak-ng-data-dict-gn"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for gn_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "gn", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/gn_dict",
]
