[package]
name        = "espeak-ng-data-dict-gu"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for gu_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "gu", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/gu_dict",
]
