[package]
name        = "espeak-ng-data-dict-hak"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for hak_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "hak", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/hak_dict",
]
