[package]
name        = "espeak-ng-data-dict-haw"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for haw_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "haw", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/haw_dict",
]
